// 文件路径: common/v1/errors.proto
// =============================================================================
// KILLER ERP - 错误定义
// =============================================================================
//
// 定义标准化的错误响应格式，供所有服务统一使用。
// 遵循 Google Cloud API 错误模型。
//
// =============================================================================

syntax = "proto3";

package common.v1;

import "google/protobuf/timestamp.proto";

// =============================================================================
// ErrorCode - 错误码枚举
// =============================================================================
enum ErrorCode {
  // 未指定
  ERROR_CODE_UNSPECIFIED = 0;
  // 参数无效
  ERROR_CODE_INVALID_ARGUMENT = 1;
  // 资源不存在
  ERROR_CODE_NOT_FOUND = 2;
  // 资源已存在
  ERROR_CODE_ALREADY_EXISTS = 3;
  // 权限不足
  ERROR_CODE_PERMISSION_DENIED = 4;
  // 未认证
  ERROR_CODE_UNAUTHENTICATED = 5;
  // 资源耗尽（限流）
  ERROR_CODE_RESOURCE_EXHAUSTED = 6;
  // 前置条件失败
  ERROR_CODE_FAILED_PRECONDITION = 7;
  // 操作中止（并发冲突）
  ERROR_CODE_ABORTED = 8;
  // 超出范围
  ERROR_CODE_OUT_OF_RANGE = 9;
  // 内部错误
  ERROR_CODE_INTERNAL = 10;
  // 服务不可用
  ERROR_CODE_UNAVAILABLE = 11;
  // 数据丢失
  ERROR_CODE_DATA_LOSS = 12;
  // 业务规则违反
  ERROR_CODE_BUSINESS_RULE = 100;
}

// =============================================================================
// ErrorDetail - 错误详情
// =============================================================================
message ErrorDetail {
  // 出错字段名称
  string field = 1;
  // 错误消息描述
  string message = 2;
  // 具体错误码
  string code = 3;
}

// =============================================================================
// Error - 错误响应
// =============================================================================
message Error {
  // 错误码
  ErrorCode code = 1;
  // 错误消息
  string message = 2;
  // 详细错误信息列表
  repeated ErrorDetail details = 3;
  // 请求唯一标识，用于追踪
  string request_id = 4;
  // 错误发生时间戳
  google.protobuf.Timestamp timestamp = 5;
}
